Fixes wrong size of default avatar on desktop profile

--- a/app/assets/stylesheets/application/sidebar.css
+++ b/app/assets/stylesheets/application/sidebar.css
@@ -140,6 +140,10 @@
 		position: relative;
 	}
 
+	.Sidebar-userName .Avatar {
+		--size: 254 !important;
+	}
+
 	.Sidebar-userName figcaption {
 		position: absolute;
 		inset-block-start: 50%;
